# nf-tui

./: .gitignore  LICENSE  README.md  demo.tape  nf_scope.py  nf_tui.py  pyproject.toml  run.py  serve.py
.github/workflows/: ci.yml
tests/: conftest.py  generate_run.py  test_nf_tui.py
