[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-tui"
version = "0.1.0"
description = "A terminal/web UI to browse Nextflow tasks, logs, and output files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stav Grossfeld" }]
keywords = ["nextflow", "bioinformatics", "tui", "textual", "nf-core", "pipeline"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.80",
    "textual-serve>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nf-tui = "nf_tui:main"
nf-tui-web = "serve:main"

[project.urls]
Homepage = "https://github.com/stavgrossfeld/nf-tui"
Repository = "https://github.com/stavgrossfeld/nf-tui"
Issues = "https://github.com/stavgrossfeld/nf-tui/issues"

[tool.setuptools]
py-modules = ["nf_tui", "serve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
